--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <table cellspacing="20">
     <tr>
       <td>
-        <img src="C:\Users\asus\Documents\WEB DEVELOPMENT ANGELINA\HTML - Personal Site\WhatsApp Image 2021-10-08 at 11.14.59 PM-modified.png " alt="aayushi's profile picture">
+        <img src="C:\Users\asus\Documents\WEB DEVELOPMENT ANGELINA\WhatsApp Image 2021-10-08 at 11.14.59 PM-modified.png " alt="aayushi's profile picture">
 
       </td>
       <td>
